<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sidebar_drawer_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomePageActivity"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <!-- Main content layout -->


    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:layout_width="match_parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:title="@string/app_name"
                    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                    app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
                    app:contentScrim="?attr/colorSurface"
                    app:titleEnabled="true"
                    app:expandedTitleGravity="bottom|center"
                    app:collapsedTitleTextColor="?attr/colorOnSurface"
                    app:expandedTitleTextColor="?attr/colorOnSurface">

                <ImageView
                        android:id="@+id/app_bar_image"
                        android:layout_width="1500dp"
                        android:layout_height="150dp"
                        android:layout_marginBottom="40dp"
                        android:layout_marginTop="40dp"
                        android:src="@drawable/ic_app_icon"
                        android:layout_gravity="center"
                        app:layout_collapseMode="parallax"/>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/colorBackground"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_width="match_parent"
                        android:background="?attr/colorSurface"
                        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical|end">

<!--                        <Button android:id="@+id/admin_button"-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:orientation="vertical"-->
<!--                                android:gravity="center_horizontal"-->
<!--                                android:text="Admin"-->
<!--                                />-->

                        <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:gravity="center_horizontal">

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/app_name"
                                    style="@style/TextAppearance.AppCompat.Headline"
                                    android:textColor="?attr/colorOnSurface"
                                    android:paddingTop="0dp"
                                    android:paddingBottom="0dp"
                                    android:layout_marginBottom="0dp"
                                    android:paddingEnd="5dp"
                                    android:paddingStart="5dp"/>

                            <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal">

                                <ImageButton
                                        android:id="@+id/ocr_status"
                                        android:layout_width="20dp"
                                        android:layout_height="20dp"
                                        android:src="@drawable/ic_ocr_cloud"
                                        android:background="@android:color/transparent"
                                        app:tint="?attr/colorOnSurface"
                                        android:scaleType="fitCenter"/>
                            </LinearLayout>
                        </LinearLayout>


                        <ImageButton
                                android:id="@+id/btn_search_note"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:layout_margin="4dp"
                                android:src="@drawable/ic_search"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                app:tint="?attr/colorOnSurface"
                                android:scaleType="fitCenter"/>
                    </LinearLayout>

                </androidx.appcompat.widget.Toolbar>

                <!-- RecyclerView for the main content -->
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/note_card_grid_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:clipToPadding="false"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="2"
                        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/> <!-- Adjust spanCount based on the desired number of columns per row -->
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
                android:id="@+id/fab_menu_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:orientation="vertical"
                android:padding="16dp"
                android:visibility="gone">

            <!--             Camera FAB-->
            <LinearLayout
                    android:id="@+id/fab_camera_menu_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="16dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SmartNote"
                        android:background="@drawable/fab_label_background"
                        android:padding="8dp"
                        android:layout_marginEnd="8dp"
                        android:textColor="@color/white"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_camera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_camera"
                        android:contentDescription="Add Camera Note"
                        app:fabSize="mini"/>
            </LinearLayout>

            <!--             Handwritten FAB-->
            <LinearLayout
                    android:id="@+id/fab_handwritten_menu_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="16dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Handwritten"
                        android:background="@drawable/fab_label_background"
                        android:padding="8dp"
                        android:layout_marginEnd="8dp"
                        android:textColor="@color/white"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_handwritten"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_pen"
                        android:contentDescription="Add Handwritten Note"
                        app:fabSize="mini"/>
            </LinearLayout>

            <!--             Text FAB-->
            <LinearLayout
                    android:id="@+id/fab_text_menu_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="16dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Text"
                        android:background="@drawable/fab_label_background"
                        android:padding="8dp"
                        android:layout_marginEnd="8dp"
                        android:textColor="@color/white"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_text"
                        android:contentDescription="Add Text Note"
                        app:fabSize="mini"/>

            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="Add Note"
                android:src="@drawable/ic_pen"
                android:layout_gravity="end|bottom"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/new_note_opt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="Add Note"
                android:src="@drawable/ic_add"
                android:layout_gravity="end|bottom"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!-- Navigation view for the sidebar -->
    <LinearLayout
            android:layout_gravity="start"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="?attr/colorSurface"
            android:padding="16dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="The sidebar navigation is under construction"
                android:textColor="?attr/colorOnSurface"/>

        <ImageButton
                android:id="@+id/main_settings_menu_btn"
                android:scaleType="fitStart"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_settings"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="?attr/colorOnSurface"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="?attr/colorOutline"/>

        <Button
                android:id="@+id/admin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Admin Panel"
                android:layout_margin="8dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/navigation_sidebar_view"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        <Button
                android:id="@+id/btn_new_folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add New Folder"
                android:layout_gravity="center"/>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>