...
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:strokeWidth="1dp"
                app:strokeColor="?attr/colorOutline">

            <com.originb.inkwisenote2.modules.handwrittennotes.ui.DrawingView
                    android:id="@+id/smart_drawing_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:padding="16dp"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
...
