...
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/card_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:minHeight="150dp"
                android:background="?attr/drawingSurface"
                android:scaleType="centerCrop"
...
