...
                        app:tint="?attr/colorOnSecondaryContainer"
                        app:backgroundTint="?attr/colorSecondaryContainer"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <com.originb.inkwisenote2.modules.smartnotes.ui.NonScrollableRecyclerView
            android:id="@+id/smart_note_page_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="?android:attr/colorBackground"
            android:clipToPadding="false"
            android:padding="8dp"
...
